Aligning Issues with the responsiveness

--- a/desktop.css
+++ b/desktop.css
@@ -40,31 +40,45 @@ body {
 
   .header-div-container{
     display: grid;
-    grid-template-columns: repeat(2, 1fr)
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+    align-items: center;
+    margin: 83px 0px 0px 0px;
   }
 
   .title-typemaster{
-   
+    width: 445px;
+    height: 312px;
+    border: solid 1px black;
   }
 
+  
   .title-typemaster h1{
+    width: 342px;
+    height: 96px;
     color: #162542;
     font-weight: 900;
     font-size: 2.5rem;
   }
 
   .title-typemaster p{
-    color:  #7B8BAD;
-    font-weight: 700;
-    font-size: 1rem;
+    width: 429px;
+    height: 68px;
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    color: #7B8BAD;
   }
 
   .pre-order-container{
     display: flex;
     justify-content: space-between;
+    margin: 42px 0px 0px 0px;
   }
 
-  .pre-order-container #keyboard-pre-order-now{
+   #keyboard-pre-order-now{
     background-color: #F16718;
     color: #ffffff;
     font-weight: 900;
@@ -74,15 +88,18 @@ body {
     padding: 0.6rem;
     border: none;
   }
-
-  #keyboard-pre-order-now{
+  
+  #release{
+    height: 11.5px;
     color: #7B8BAD;
+    justify-self: center;
   }
 
   .keyboard #main-keyboard {
     width: 540px;
     height: 480px;
     border-radius: 16px;
+    margin: 0pc 0px 0px 0px;
   }
   
   /* PHONE-KEYBOARD */
